--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap');
+
 .body {
   background: #fef7d3;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   height: 100vh;
 }
 
@@ -12,6 +15,8 @@
 
 #root {
   text-align: center;
+  font-family: 'Montserrat', sans-serif; 
+
 }
 
 a {
@@ -36,6 +41,7 @@ nav {
   display: none;
 }
 .navbar-links-container a {
+  font-family: 'Montserrat', sans-serif; 
   margin-right: 3rem;
   text-decoration: none;
   color: #224278;
@@ -76,7 +82,6 @@ nav {
     border: none;
     padding: 40px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 20px;
   }
   
@@ -105,10 +110,6 @@ nav {
     margin: 0 5px;
   }
   
-  /* .header-right {
-    /* Puedes ajustar estilos para la parte derecha, como agregar una imagen */
-  /* } */ */
-  
   .info-section {
     background-color: #fff;
     padding: 20px;
@@ -122,12 +123,16 @@ nav {
     color: #224278;
   }
   
-  .info-section p {
+  .info-section {
     font-size: 1rem;
-    color: #3768a4;
+    color: #224278;
     line-height: 1.5
   }
 
+
+  .button {
+    background-color: #e8f5ff!important;
+  }
 
 
 .proyectos-container {
@@ -181,9 +186,10 @@ nav {
   a:hover {
     color: #0056b3; /* Cambia de color al pasar el cursor */
   }
+ 
 
-  .carousel-control-prev, .carousel-control-next  {
-    color: "black"
-  }   
+
+  
+
 
 
