--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,30 @@ nav {
   justify-content: space-between;
   min-height: 90px;
 }
+
+.nav-logo-container {
+  border-radius: 50%;
+  box-sizing: border-box;
+  background: #fff;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  transition: 0.5s;
+  background: rgba(0, 0, 0, 0.0);
+  color: var(--color);
+  font-size: 1.8em;
+  -webkit-box-reflect: below -63px linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+}
+
+.logo:hover {
+  background: lightgrey;
+  border-radius: 50%;
+  width: 1.5em;
+}
+
 .navbar-menu-container {
   display: none;
 }
