--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,24 @@ nav {
   min-height: 90px;
 }
 
+@keyframes myAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes myAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .nav-logo-container {
   border-radius: 50%;
   box-sizing: border-box;
@@ -52,11 +70,10 @@ nav {
   background: rgba(0, 0, 0, 0.0);
   color: var(--color);
   font-size: 1.8em;
-  -webkit-box-reflect: below -63px linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+  -webkit-box-reflect: below -63px linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
 }
 
 .logo:hover {
-  background: lightgrey;
   border-radius: 50%;
   width: 1.5em;
 }
@@ -107,6 +124,8 @@ nav {
   }
   
   .landing-header {
+    -webkit-animation: myAnimation 2s ease-out;
+  animation: myAnimation 2s ease-out;
     border: none;
     padding: 40px;
     border-radius: 10px;
@@ -224,8 +243,180 @@ nav {
   }
  
 
+  .card {
+    width: 200px;
+    height: 300px!important;
+    background: #e7f5ff!important;
+    border-radius: 15px;
+    box-shadow: 1px 5px 60px 0px #100a886b;
+   }
+   
+   .card span {
+    font-weight: 600;
+    color: #224278;
+    text-align: center;
+    display: block;
+    padding-top: 10px;
+    font-size: 16px;
+   }
+   
+   .card .job {
+    font-weight: 400;
+    color: #224278;
+    display: block;
+    text-align: center;
+    padding-top: 3px;
+    font-size: 12px;
+   }
+   
+   .card .img {
+    width: 150px;
+    height: 100px;
+    background: #6b64f3;
+    border-radius: 15px;
+    margin: auto;
+    margin-top: 25px;
+   }
+   
+   .card button {
+    padding: 1px 16px;
+    display: block;
+    margin: 0.5em;
+    margin-bottom: 0.5em;
+    border-radius: 8px;
+    border: none;
+    margin-top: 0.1em;
+    background: #e7f5ff;
+    color: #017bfe;
+    font-weight: 600;
+   }
+   
+   .card button:hover {
+    background: #89a6c9;
+   }
 
+
+ /* Estilos generales */
+.container-videos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Estilos para pantallas grandes */
+@media (min-width: 768px) {
+  .container-videos {
+    margin-top: 50px;
+  }
+
+  h1, h2 {
+    text-align: center;
+  }
+
+  .movistar, .rtvc {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
+
+  iframe {
+    max-width: 100%;
+    max-height: 450px; /* Establecer el max-height */
+  }
+}
+
+/* Estilos para pantallas medianas */
+@media (max-width: 767px) {
+  h1, h2 {
+    text-align: center;
+  }
+
+  .movistar, .rtvc {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+  }
+
+  iframe {
+    width: 100%;
+    max-height: 250px; /* Establecer el max-height */
+    max-width: 250px;
+  }
+}
+
+.span.carousel-control-next-icon {
+  margin-left: -60px!important;
+  width: 100px!important;
+  color: black!important;
   
+
+}
+
+.carousel-control-next {
+  margin-left: 80px!important;
+  width: 100px!important;
+  color: black!important;
+  
+
+}
+
+
+.skillscard {
+  width: 290px;
+  height: 300px;
+  background: #e7f5ff;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  color: #047cb9;
+  border-radius: 15px;
+  box-shadow: -20px 20px 0px -5px #047cb9;
+}
+
+.title {
+  font-weight: 900;
+  font-size: 1.7em;
+}
+
+.tag__name {
+  display: inline-block;
+  color: #fff;
+  font-size: 1.1em;
+  background-color: #749bc6;
+  padding: 6px 23px 9px;
+  border-radius: 70em;
+  margin: 8px 6px 8px 0;
+  margin-left: 0px;
+  position: relative;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+}
+
+.tag__name::before,.tag__name::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 40%;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #749bc6;
+}
+
+.tag__name::before {
+  left: 7px;
+}
+
+.tag__name::after {
+  right: 7px;
+}
+
+.tag__name:hover {
+  transform: scale(1.1);
+  background-color: #047cb9;
+}
 
 
 
